Fixing the layout problem (plus changed menu font size)

--- a/src/justintime/assets/style.css
+++ b/src/justintime/assets/style.css
@@ -24,6 +24,7 @@ Taken from https://codepen.io/chriddyp/pen/bWLwgP.css
   margin: 0 auto;
   padding: 0 20px;
   box-sizing: border-box;
+ 
 }
 .column, .columns {
   width: 100%;
@@ -51,6 +52,7 @@ Taken from https://codepen.io/chriddyp/pen/bWLwgP.css
 .container {
   display: table;
   flex-wrap: nowrap;
+
 
  }
   .column, .columns {
@@ -101,6 +103,12 @@ Taken from https://codepen.io/chriddyp/pen/bWLwgP.css
     display: table-cell;
     flex-shrink: initial;
     height:auto;
+    position: relative;
+    overflow: scroll;
+    margin-right: 0px;
+    margin-bottom: -8px;
+    min-height: calc(100% + 8px);
+    max-height: calc(100% + 8px);
      /* width: 1000px;
      white-space:nowrap;
       display: flex;
@@ -439,6 +447,7 @@ hr {
   padding-top: 0 !important;
     padding-bottom: 0 !important;
     padding-right: 3rem;
+    font-size: 2rem;
 
 }
 
@@ -446,6 +455,7 @@ hr {
   padding: 0 2;
   height: 50px;
   line-height: 40px;
+  font-size: 2rem;
 }
 
 .navbar-toggle {
